fix(footer): wrap footer universal links and add appropriate space

--- a/elements/rh-footer/rh-footer-lightdom.css
+++ b/elements/rh-footer/rh-footer-lightdom.css
@@ -187,7 +187,7 @@ rh-footer-universal:not(:defined) {
   & [slot='links-primary'],
   & [slot='links-secondary'] {
     display: flex;
-    flex-direction: column;
+    flex-flow: column wrap;
     gap: var(--rh-space-md, 8px);
     font-size: var(--rh-font-size-body-text-xs, 0.75rem);
     margin: 0;
@@ -323,7 +323,7 @@ rh-footer:not(:defined) rh-footer-universal:not(:defined) {
     & ul[slot='links-primary'],
     & ul[slot='links-secondary'] {
       flex-direction: row;
-      gap: var(--rh-space-xl, 24px);
+      gap: var(--rh-space-md, 8px) var(--rh-space-xl, 24px);
     }
 
     & ul[slot='links-primary'] {
